Fix extra space at bottom of About page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,10 @@ body {
   margin-top: 0;
 }
 
+.page-content > *:last-child {
+  margin-bottom: 0;
+}
+
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
